<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border_room"
    android:gravity="center|center_horizontal"
    android:minWidth="1000dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rom_registrering"
        android:textColor="@color/orange"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startRomnummer"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/pp"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/romnummer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:backgroundTint="@color/orange"
            android:hint="@string/romnummerreg"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="2"
            android:nestedScrollingEnabled="false"
            android:textColor="@color/orange"
            android:textColorHighlight="#9E3F0E"
            android:textColorHint="#7ECC5E24"
            android:textColorLink="#9C4212"
            android:textSize="14sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_floor" />

        <Spinner
            android:id="@+id/etasjespin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_desc" />

        <Spinner
            android:id="@+id/beskrivelsespin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_kapasitet" />

        <Spinner
            android:id="@+id/kapspin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
            android:id="@+id/txtFeil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_close" />

        <ImageView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_saveroom" />

    </LinearLayout>

</LinearLayout>