<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@drawable/border_room"
            android:gravity="center"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                app:srcCompat="@drawable/ic_room2" />

            <TextView
                android:id="@+id/romnr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:foregroundGravity="center_vertical"
                android:gravity="center|center_vertical"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="P4453" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/beskrivelsereg"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/besk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="@string/grupperomreg"
                    android:textColor="@color/orange"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Kapasitet:"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/kapasitet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="2dp"
                    android:text="5"
                    android:textAlignment="textStart"
                    android:textColor="@color/orange"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/etasjereg"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etasjeNr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="2dp"
                    android:text="5"
                    android:textAlignment="textStart"
                    android:textColor="@color/orange"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/options"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|top"
            android:layout_marginEnd="-5dp"
            app:srcCompat="@drawable/ic_menu" />


    </LinearLayout>

</LinearLayout>