<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border_room"
    android:contentDescription="@string/todo"
    android:gravity="center|center_horizontal"
    android:minWidth="1000dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reservasjon"
        android:textColor="@color/orange"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_person" />


        <EditText
            android:id="@+id/sNavn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:autofillHints=""
            android:backgroundTint="@color/orange"
            android:hint="@string/studentnavn"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:nestedScrollingEnabled="false"
            android:textColor="@color/orange"
            android:textColorHighlight="#9E3F0E"
            android:textColorHint="#7ECC5E24"
            android:textColorLink="#9C4212"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_room" />

        <Spinner
            android:id="@+id/romSpin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_fra" />

        <Spinner
            android:id="@+id/fraspin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_til" />

        <Spinner
            android:id="@+id/tilspin"
            style="@style/Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"

            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_room"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/datoimg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_dato" />

        <DatePicker
            android:id="@+id/dato"
            android:layout_width="match_parent"
            android:layout_height="390px"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"

            android:scaleX="0.8"
            android:scaleY="0.8"
            android:theme="@style/MyDatePicker" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtFeil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#F44336" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_close" />

        <ImageView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_saveroom" />

    </LinearLayout>

</LinearLayout>